<resources>
    <string name="app_name">NotesGraph</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_favorites">Favorites</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_continue">Continue</string>
    <string name="text_delete_item">Delete all entries</string>
    <string name="text_ask_delete">Are you sure want to continue?</string>

    <string name="title_create_graph_title">Create Graph</string>
    <string name="title_edit_graph_title">Edit Graph</string>

    <string name="text_title">Title (required)</string>
    <string name="text_title_hint">Add a title for your graph</string>
    <string name="text_description">Description</string>
    <string name="text_description_hint">Add your description</string>
    <string name="check_input_data">Please fill required fields.</string>
    <string name="text_units">Units</string>
    <string name="text_units_hint">Add units for your data</string>
    <string name="text_create">Create</string>
    <string name="text_update">Update</string>

    <string name="title_add">Add a graph</string>
    <string name="title_about">About</string>
    <string name="title_settings">Settings</string>
    <string name="text_edit">Edit</string>

    <string name="title_add_entry">Add a new entry</string>
    <string name="title_edit_graph">Edit</string>
    <string name="text_date">Date</string>
    <string name="text_value">Value (required)</string>
    <string name="text_add_numeric_value">Add a numeric value</string>
    <string name="title_create_entry">Create Entry</string>
    <string name="text_position">Position:</string>
    <string name="sign_out">Sign Out</string>

    <!--    Accessibility-->
    <string name="text_accessibility_delete_entry">Delete Entry</string>
    <string name="text_accessibility_application_logo">Application logo</string>
    <string name="text_accessibility_edit_current_entry">Edit current entry</string>
    <string name="text_accessibility_edit_graph">Edit graph</string>
    <string name="text_accessibility_delete_graph">Delete graph</string>

    <!--    Messages-->
    <string name="text_authentication_failed">Authentication Failed.</string>
    <string name="text_error_network">Network Error: Check your Internet connection.</string>

    <!--    Widget-->
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

</resources>
