<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="@dimen/spacing_xlarge">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_xlarge"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/text_date" />

    <TextView
        android:id="@+id/textView_current_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_normal"
        android:layout_marginTop="@dimen/spacing_medium"
        tools:text="@string/text_title_hint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_xlarge"
        android:layout_marginTop="@dimen/spacing_huge"
        android:text="@string/text_value" />

    <EditText
        android:id="@+id/editText_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:textSize="@dimen/font_normal"
        android:inputType="numberSigned"
        android:hint="@string/text_add_numeric_value" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_xlarge"
        android:layout_marginTop="@dimen/spacing_huge"
        android:text="@string/text_description" />

    <EditText
        android:id="@+id/editText_description"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="top"
        android:textSize="@dimen/font_normal"
        android:padding="@dimen/spacing_medium"
        android:background="@drawable/background_input"
        android:layout_marginTop="@dimen/spacing_medium"
        android:hint="@string/text_description_hint" />

    <Button
        android:id="@+id/button_create"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:padding="@dimen/spacing_xxlarge"
        android:layout_marginTop="@dimen/spacing_xxhuge"
        android:layout_height="wrap_content"
        android:text="@string/text_create"/>

    <ImageButton
        android:id="@+id/imageButton_delete"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/spacing_large"
        android:backgroundTint="@color/red_pastel"
        android:text="@string/text_continue"
        tools:visibility="visible"
        android:contentDescription="@string/text_accessibility_delete_entry"
        app:srcCompat="@drawable/ic_delete" />

</LinearLayout>