<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/radius_border_medium">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_large"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView_edit"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="@dimen/spacing_small"
            android:backgroundTint="@color/red_pastel"
            android:text="@string/text_continue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/text_accessibility_edit_current_entry"
            app:layout_constraintTop_toBottomOf="@+id/textView_description"
            app:srcCompat="@drawable/ic_edit_gray" />

<!--        <ImageView-->
<!--            android:id="@+id/imageButton_delete"-->
<!--            android:layout_width="30dp"-->
<!--            android:layout_height="30dp"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_marginTop="@dimen/spacing_small"-->
<!--            android:backgroundTint="@color/red_pastel"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            android:tint="@color/red_pastel"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/textView_description"-->
<!--            app:srcCompat="@drawable/ic_delete" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_edit"
            android:textSize="@dimen/font_micro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/imageView_edit"
            app:layout_constraintTop_toBottomOf="@id/imageView_edit" />

        <TextView
            android:id="@+id/textView_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_large"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="05-05-20" />

        <TextView
            android:id="@+id/textView_position_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/text_position"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_date" />

        <TextView
            android:id="@+id/textView_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_marginTop="@dimen/spacing_large"
            app:layout_constraintStart_toEndOf="@id/textView_position_title"
            app:layout_constraintTop_toBottomOf="@+id/textView_date"
            tools:text="517" />

        <TextView
            android:id="@+id/textView_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="@dimen/font_large"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/textView_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="100 USD" />

        <TextView
            android:id="@+id/textView_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_position_title"
            tools:text="blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>